--- a/secciones/unidad-lucas.html
+++ b/secciones/unidad-lucas.html
@@ -66,11 +66,11 @@
                             <li class="nav-item">
                                 <a class="nav-link diseño-texto-navbar" href="../index.html#servicios" rel="noopener noreferrer">SERVICIOS</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link diseño-texto-navbar" href="../index.html#unidades" rel="noopener noreferrer">UNIDADES</a>
-                            </li>
                             <li class="nav-item ">
                                 <a class="nav-link  diseño-texto-navbar" href="../index.html#seguridad-primero" rel="noopener noreferrer">SEGURIDAD</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link diseño-texto-navbar" href="../index.html#unidades" rel="noopener noreferrer">UNIDADES</a>
                             </li>
                             <li class="nav-item ">
                                 <a class="nav-link  diseño-texto-navbar" href="../index.html#trayectoria" rel="noopener noreferrer">TRAYECTORIA</a>
@@ -116,7 +116,6 @@
 </div>    
     
     
-
 <!-- ******************* -->
 <!-- GALERIA DE IMAGENES -->
 <!-- ******************* -->
@@ -186,77 +185,63 @@
 </div>
 
 
-<!-- ****** -->
-<!-- footer -->
-<!-- ****** -->
-    <footer id="contactar" class="fondo-footer ">
-        <div class="container-fluid ">
-            <div class="row p-4 pb-2 text-white ">
-                <div class="col-xs-12  col-lg-4 text-center">
-                    <img class="img-fluid" src="../imagenes/logo transporte escolar.png" width="230px"
-                        alt="logo de la empresa">
-                    <p class="text-white mt-2 ">La Tablada,Bs.As</p>
-                    <div>
-                        <p>
-                            <a href="#" target="_blank" rel="noopener noreferrer"
-                                class="text-decoration-none diseño-footer ">Aviso legal
-                            </a>
-                            |
-                            <a href="#" target="_blank" rel="noopener noreferrer"
-                                class="text-decoration-none diseño-footer">Política de privacidad
-                            </a>
-                            |<br>
-                            <a href="#" target="_blank" rel="noopener noreferrer"
-                                class="text-decoration-none diseño-footer">Política de calidad
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xs-12 col-md-4 col-lg-3 text-center">
-                    <p class="h5 mb-3 text-center text-warning texto-footer">SOLICITAR INFORMACION</p>
-                    <p>¿Necesita mas informacion sobre alguno de nuestross servicios? Pongase en contacto con nosotros y
-                        le informaremos sin compromiso.</p>
-                    <a href="#" rel="noopener noreferrer"><button type="button"
-                            class=" text-white mb-3 boton-contactar">CONTACTAR</button></a>
-                </div>
-                <div class="col-xs-12 col-md-4 col-lg-3 text-center ">
-                    <h5 class="text-center mb-3 text-warning texto-footer">HORARIOS DE ATENCION</h5>
-                    <P class=" mb-4">Lunes a Sabado de 8 a 19 hs.
-                    <h5 class="text-warning texto-footer">
-                        ATENCIOM AL CLIENTE
-                        <a class="text-decoration-none"
-                            href="https://api.whatsapp.com/send?phone=g3845885&text=Hola%20sean%20vienvenidos!"
-                            rel="noopener noreferrer">
-                            <p class="atencion-al-cliente">11 3431 - 5499 </p>
-                        </a>
-                    </h5>
-                    </P>
-                </div>
-                <div class="col-xs-12 col-md-4 col-lg-2 text-center ">
-                    <p class="h5 mb-3 text-warning texto-footer">CONTACTOS</p>
-                    <div class="mb-2">
-                        <a class="text-white text-decoration-none tamaño-logo-contacto" href="#"
-                            rel="noopener noreferrer"> <i class="fab fa-instagram me-2 instagram "></i></a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-white text-decoration-none" href="#" rel="noopener noreferrer"> <i
-                                class="fab fa-facebook me-2 uli"></i></a>
-                    </div>
-                    <div class="mb-2">
-                        <a class="text-white text-decoration-none tamaño-logo-contacto"
-                            href="https://api.whatsapp.com/send?phone=g3845885&text=Hola%20sean%20vienvenidos!"
-                            rel="noopener noreferrer"><i class="fab fa-whatsapp me-2 whatsapp"></i></a>
-                    </div>
-                </div>
-            </div>
+<!--********-->
+<!-- FOOTER -->
+<!--********-->
+<footer id="contactar">
+    <div class="columna">
+        <div class="imagen-footer">
+            <img class="img-fluid" src="../imagenes/logo transporte escolar.png" 
+        alt="logo de la empresa">
         </div>
-        <div class="col-xs-12 pt-1 pb-1 todos-los-derechos-reservados">
-            <p class="text-white text-center fondo-derechosReservados">© Copyright TRANSPORTE-RAUL. Todos los derechos
-                reservados
-                Diseño web: gonzarobledo96@gmail.com
-                TRANSPORTE-RAUL 2023</p>
+        <p class="text-white mt-2 text-center">La Tablada, La Matanza.</p>
+        <!-- horario de atencion -->
+        <h5 class="text-center mt-4"><i class="fa fa-clock-o" aria-hidden="true"></i> HORARIOS DE ATENCION</h5>
+        <p class="text-center"><i class="fa fa-map-marker text-white" aria-hidden="true"></i> Lunes a Sabado de 7 a 21hs.</p>
+    </div>
+    <!-- contacto -->
+    <div class="columna container-fluid">
+      <h5 class="text-center mb-3 container-fluid">CONTACTOS</h5>
+      <div class="logos-contacto text-center">
+        <ul>
+            <li>
+              <a href="#">
+                <i class="fab fa-facebook-f icon"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/transporteraul/" target="_blank"><i class="fa-brands fa-instagram icon"></i></a>
+            </li>
+            <li>
+              <a href="https://api.whatsapp.com/send?phone=34315499&text=Hola%20sean%20vienvenidos!"><i class="fa-brands fa-whatsapp icon"></i></a></li>
+            <li>
+              <a href="#"><i class="fa-solid fa-envelope icon"></i></a></li>
+          </ul>
+      </div>
+      <div class="text-center contacto-gmail">
+        <a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white"><i
+        class="fa-solid fa-envelope mt-2"></i> robledof817@gmail.com
+        <a>
+    </div>
+    <div class="text-center contacto-telefono">
+      <i class="fa fa-phone"></i><a href="tel:+541146623895">4662-3895</a> |
+      <a href="tel:+541126428286 ">2642-8286 </a> |
+      <a href="tel:+541164373468 ">6437-3468 </a>
+    </div>
+  </div>
+    <div class="columna">
+      <!-- solicitar informacion -->
+        <h5 class=" mb-3 text-center">SOLICITAR INFORMACION</h5>
+        <p class="text-center">¿Necesita mas informacion sobre alguno <br> de nuestross servicios? Pongase en contacto <br> con nosotros y le informaremos <br> sin compromiso.</p>
+        <div class="text-center boton-contactar">
+            <a href="https://api.whatsapp.com/send?phone=34315499&text=Hola%20sean%20vienvenidos!" rel="noopener noreferrer ">CONTACTAR</a>
         </div>
-    </footer>
+  </footer>
+  <div class="col-xs-12 pt-2 pb-1 todos-los-derechos-reservados">
+    <p class="text-white text-center">© Copyright TRANSPORTE-RAUL. Todos los derechos
+        reservados/
+        Diseño web: gonzarobledo96@gmail.com
+        TRANSPORTE-RAUL 2023</p>
+</div>
 
     <!-- whatsapp -->
     <div>
