resolviendo media cuire

--- a/index.html
+++ b/index.html
@@ -29,27 +29,23 @@
 </head>
 <body>
 
-  
+<!--SUBMENU-PRINCIPAL -->
+  <nav class="menu text-center">
+    <ol>
+      <li><a href="tel:+1126428286" target="_blank" rel="noopener noreferrer"
+        class="text-decoration-none text-white"><i class="fa-solid fa-phone hover-fondo-superior">
+            11 2642 - 8286</i></a></li>
+      <li><a href="https://api.whatsapp.com/send?phone=34315499&text=Hola%20sean%20vienvenidos!" target="_blank" rel="noopener noreferrer"
+        class="text-decoration-none text-white"><i
+            class="fa-brands fa-whatsapp hover-fondo-superior"> 11 3431 - 5499</i></a></li>
+      <li><a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white"><i
+        class="fa-solid fa-envelope hover-fondo-superior"> robledof817@gmail.com</i></a></li>
+      <li> <a href="#" class="text-decoration-none text-white"><i
+        class="fa-solid fa-clock hover-fondo-superior"> Horario de atencion: 07:00 - 21:00</i> </a></li>
+    </ol>
+  </nav>
     <!--I N I C I O -->
     <div class="inicio" id="inicio ">
-        <div class="container-fluid text-center fs-4 fondo-superiro-navbar ">
-            <div class="container ">
-                <div>
-                    <div class="submenu-principal text-center posicion-letras">
-                        <a href="tel:+1126428286" target="_blank" rel="noopener noreferrer"
-                            class="text-decoration-none text-white ms-5 "><i class="fa-solid fa-phone hover-fondo-superior">
-                                11 2642 - 8286</i></a>
-                        <a href="https://api.whatsapp.com/send?phone=34315499&text=Hola%20sean%20vienvenidos!" target="_blank" rel="noopener noreferrer"
-                            class="text-decoration-none text-white ms-5"><i
-                                class="fa-brands fa-whatsapp hover-fondo-superior"> 11 3431 - 5499</i></a>
-                        <a href="mailto:?to=robledof817@gmail.com" target="_blank" rel="noopener noreferrer" class="text-decoration-none text-white ms-5"><i
-                                class="fa-solid fa-envelope hover-fondo-superior"> robledof817@gmail.com</i></a>
-                        <a href="#" class="text-decoration-none text-white ms-5"><i
-                                class="fa-solid fa-clock hover-fondo-superior"> Horario de atencion: 07:00 - 21:00</i> </a>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class=" fixed-top">
             <nav class="navbar navbar-expand-lg fondo-del-nav ">
                 <div class="container">
@@ -77,7 +73,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"><img width="130" height="60"
-                                        class="logo-tutuca " src="./imagenes/logo transporte escolar.png"
+                                        class="logo-transporte-escolar " src="./imagenes/logo transporte escolar.png"
                                         alt="Logo"></a>
                             </li>
                             <li class="nav-item ">
@@ -116,65 +112,68 @@
 <!-- ****************** -->
 <!-- NUESTROS-SERVICIOS -->
 <!-- ****************** -->
-<div id="servicios" class="titulo-nuestros-servicios text-center">
-    <h2>NUESTROS SERVICIOS</h2>
-    <p><i class="bi bi-three-dots"></i> <i class="bi bi-circle-fill"></i> <i class="bi bi-three-dots"></i></p>
-    <p>Conocé nuestra variedad de servicios de transporte <br>
-        y elegí el que más se ajuste a tus necesidades.</p>
-</div>
-<div class="container-informacion">
-    <div class="column">
-        <div>
-            <div class="icono">
-                <i class="fa fa-book"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Transporte escolar</h2>
-              <p>Brindamos un servicio personalizado trasladando alumnos <br> tanto a sus hogares, como a cualquier actividad educativa.</p>
-            </div>
+<section id="services">
+  <div class="container">
+
+      <div class="section-header">
+          <h2 class="section-title text-center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">NUESTROS SERVICIOs</h2>
+          <p class="text-center wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">Conocé nuestra variedad de servicios de transporte<br> y elegí el que más se ajuste a tus necesidades.</p>
+      </div>
+
+      <div class="row">
+          <div class="features">
+              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="0ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 0ms; animation-name: fadeInUp;">
+                  <div class="media service-box">
+                      <div class="pull-left">
+                          <i class="fa fa-book"></i>
+                      </div>
+                      <div class="media-body">
+                          <h4 class="media-heading">Transporte escolar</h4>
+                          <p>Brindamos un servicio personalizado trasladando alumnos tanto a sus hogares, como a cualquier actividad educativa.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
+
+              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="100ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 100ms; animation-name: fadeInUp;">
+                  <div class="media service-box">
+                      <div class="pull-left">
+                          <i class="fa fa-briefcase"></i>
+                      </div>
+                      <div class="media-body">
+                          <h4 class="media-heading">Charter para empresas</h4>
+                          <p>Es un servicio muy requerido por las empresas para transportar a su personal desde y hacia la empresa diariamente.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
+
+              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="200ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 200ms; animation-name: fadeInUp;">
+                  <div class="media service-box">
+                      <div class="pull-left">
+                          <i class="fa fa-camera"></i>
+                      </div>
+                      <div class="media-body">
+                          <h4 class="media-heading">Traslados turísticos</h4>
+                          <p>Brindamos servicios de transporte turístico.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
+
+              <div class="col-md-6 col-sm-6 wow fadeInUp animated" data-wow-duration="300ms" data-wow-delay="300ms" style="visibility: visible; animation-duration: 300ms; animation-delay: 300ms; animation-name: fadeInUp;">
+                  <div class="media service-box">
+                      <div class="pull-left">
+                          <i class="fa fa-calculator"></i>
+                      </div>
+                      <div class="media-body">
+                          <h4 class="media-heading">Servicios personalizados</h4>
+                          <p>Servicios de transporte a medida de las necesidades de cada cliente.</p>
+                      </div>
+                  </div>
+              </div><!--/.col-md-4-->
           </div>
-          <div class="mt-5">
-            <div class="icono">
-                <i class="fa fa-camera"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Traslados turísticos</h2>
-              <p>Brindamos servicios de transporte turístico.</p>
-            </div>
-          </div>
-          <div class="mt-5">
-            <div class="icono">
-                <i class="fa-solid fa-location-dot" style="color: #ff933b;"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Zonas de servicio</h2>
-              <div class="carousel-item active gallery-block compact-gallery text-center texto-protocolo-covid">
-                <p>Servicios en todo Capital Federal y alrededores. <a href="./imagenes/buenosairesprovincia.jpg">Ver mapa</a></p>
-            </div>
-            </div>
-          </div>
-    </div>
-    <div class="column2">
-        <div>
-            <div class="icono">
-                <i class="fa fa-briefcase"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Charter para empresas</h2>
-              <p>Es un servicio muy requerido por las empresas  <br> para transportar a su personal desde y hacia  <br> la empresa diariamente.</p>
-            </div>
-          </div>
-          <div  class="mt-5">
-            <div class="icono">
-                <i class="fa fa-calculator"></i>
-            </div>
-            <div class="titulo-y-parrafo">
-              <h2>Servicios personalizados</h2>
-              <p>Servicios de transporte a medida de las necesidades  <br> de cada cliente.</p>
-            </div>
-          </div>
-    </div>
-</div>
+      </div><!--/.row-->
+  </div><!--/.container-->
+</section>
+
 <!-- ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS -->
   <section class="ESTAS-INTERESADO-EN-ALGUNO-DE-NUESTROS-SERVICIOS">
     <div class="container">
